<package>
  <name>serial_motor_demo</name>
  <version>0.2.0</version>
  <description>
    ROS Serial Motor Demo Python.
  </description>
  <author>Patrick Goebel</author>
  <maintainer email="patrick@pirobot.org">Patrick Goebel</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/ros_arduino_python</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>serial_motor_demo_msgs</run_depend>
  <run_depend>python-serial</run_depend>
</package>
